--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "^9.4.0",
+    "npm": "^5.7.1"
+  },
   "keywords": [],
   "author": "Matthew Burr",
   "license": "UNLICENSED",
