--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A catalog for your personal movie library",
   "main": "index.js",
   "scripts": {
+    "builddev": "babel src -d build --ignore __tests__",
     "start": "node index.js",
     "test": "jest"
   },
@@ -24,6 +25,7 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.1",
     "babel-preset-env": "^1.6.1",
-    "jest": "^22.4.2"
+    "jest": "^22.4.2",
+    "regenerator-runtime": "^0.11.1"
   }
 }
