--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Matthew Burr",
   "license": "UNLICENSED",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "pg": "^7.4.1"
