--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^22.4.2",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -36,6 +37,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "regenerator-runtime": "^0.11.1",
+    "styled-components": "^3.2.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12"
   }
