--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "A catalog for your personal movie library",
   "main": "index.js",
   "scripts": {
-    "builddev":
-      "babel src/server -d build/server --ignore __tests__ && ./node_modules/.bin/webpack --mode development",
-    "buildwatch":
-      "babel src/server -d build/server --ignore __tests__ && ./node_modules/.bin/webpack --mode development -w",
+    "builddev": "babel src/server -d build/server --ignore __tests__ && ./node_modules/.bin/webpack --mode development",
+    "buildwatch": "babel src/server -d build/server --ignore __tests__ && ./node_modules/.bin/webpack --mode development -w",
     "start": "node index.js",
     "test": "jest"
   },
@@ -22,6 +20,8 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.0",
     "pg": "^7.4.1"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^22.4.2",
+    "nodemon": "^1.17.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
