--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.2.0",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
