--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Matthew Burr",
   "license": "UNLICENSED",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
