--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^7.4.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
